--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,99 @@ span {
   margin: 0 auto;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+  /* Contact Page */
+#contact {
+  padding: 5rem;
+}
+.contact-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.contact-img {
+
+  overflow: hidden;
+}
+
+.contact-img img {
+  width: 100%;
+  height: auto;
+}
+
+.fname, .mobile  {
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.lname, .email {
+  flex: 1;
+  margin-left: 1rem;
+}
+.fname input, .lname input, .mobile input, .email input {
+  width: 100%;
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  border: none;
+  background: #f8f9fa;
+  border-left: 0.1875rem solid var(--purple);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  line-height: 1.5;
+}
+
+
+.message textarea {
+  width: 100%;
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  background: #f8f9fa;
+  border: none;
+  border-left: 0.1875rem solid var(--purple);
+
+}
+.contact {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.border-left {
+  border-left: 0.1875rem solid var(--purple);
+}
+
+.row .btn {
+  background: var(--purple);
+  color: var(--white);
+  padding: 0.6875rem 1.5625rem;
+  font-size: 1rem;
+  max-width: 8.75rem;
+  letter-spacing: 0.0625rem;
+  margin-top: 1.5rem;
+  flex: 1;
+}
+
+  /* Map Section */
+  #map .row {
+  justify-content: space-around;
+  }
+
   /* Communication Section */
 
 #comm {
@@ -98,15 +191,19 @@ span {
 
 .comm-container p {
   padding: 1rem 0;
+  text-align: center;
+  line-height: 1.9;
+  color: #51585f;
 }
 
 .sub-form {
-  display: block;
   padding: 2rem 0;
+  width: 40rem;
 }
 
 .sub-box {
   display: flex;
+  box-shadow: 0rem 0.6875rem 2.625rem 0.0625rem rgba(58, 52, 82, 0.1);
 }
 
 .sub-box input {
@@ -117,7 +214,6 @@ span {
   font-size: 0.9rem;
   padding: 0.875rem 1.25rem;
   outline: 0;
-  /* box-shadow: 0px 0.6875rem 2.625rem 0.0625rem rgba(58, 52, 82, 0.1); */
 }
 
 .sub-box button {
@@ -126,7 +222,7 @@ span {
   color: var(--white);
   padding: 0.875rem 1.25rem;
   font-size: 1rem;
-  box-shadow: 0px 0.6875rem 2.625rem 0.0625rem rgba(58, 52, 82, 0.1);
+  box-shadow: 0rem 0.6875rem 2.625rem 0.0625rem rgba(58, 52, 82, 0.1);
   width: 50%;
   line-height: 1.5;
   cursor: pointer;
