--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ span {
 
 .sub-form {
   padding: 2rem 0;
-  width: 40rem;
+  max-width: 40rem;
 }
 
 .sub-box {
@@ -266,4 +266,49 @@ span {
 .top a span {
   color: var(--green);
   font-size: 1.9rem;
+}
+
+  /* Responsive */
+
+@media all and (max-width:500px) {
+
+  html {
+    font-size: 14px;
+  }
+  .row {
+    flex-direction: column;
+  }
+  #contact {
+    padding: 1rem;
+  }
+  .lname, .email {
+    flex: 1;
+    margin-left: 0;
+    margin-right: 1rem;
+  }
+
+  #map {
+    max-width: 95vw;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  #map .row, #map iframe {
+    width: 100%;
+  }
+
+  #comm {
+    padding: 3rem 0;
+  }
+
+  .sub-form {
+    width: 95%;
+  }
+  .footer-container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .footer-container * {
+    margin: 0.5rem 0;
+  }
 }
