--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -460,7 +460,7 @@ h6 {
     font-weight: 600;
     line-height: 1.3;
 }
-.hero-title span{
+.green-text {
     color: var(--green);
 }
 .article-text {
@@ -517,7 +517,6 @@ h6 {
     padding-bottom: 3rem;
 }
 .exp-title {
-    color: var(--green);
     font-size: 1rem;
     line-height: 1.5;
     font-weight: 500;
@@ -548,7 +547,7 @@ h6 {
 .partenrs-header {
     text-align: center;
     width: 80%;
-    margin: 0 auto 5rem auto;
+    margin: 0 0 5rem auto;
 }
 .services-title {
     line-height: 1;
@@ -649,6 +648,9 @@ h6 {
         border: 1px solid;
         max-width: 70px;
     }
+    .menu-btn:hover {
+        cursor: pointer;
+    } 
     .list-item,
     .drop-down {
         padding: .5rem 0;
@@ -682,4 +684,101 @@ h6 {
         position: static;
         text-align: center;
     }
+}
+
+/* 404 By Kennedy*/
+
+.error-page {
+    text-align: center;
+    width: 100%;
+    height: 700px;
+    background: whitesmoke;
+    padding: 10px;
+}
+
+.home {
+    margin-top: 10%;
+    margin-bottom: 40px;
+}
+
+.home-page {
+    text-decoration: none;
+    color: black;
+}
+
+.heading {
+    font-size: 40px;
+}
+
+.para {
+    font-size: 20px;
+    line-height: 30px;
+    color: lightslategray;
+}
+
+.back-btn {
+    width: 150px;
+    height: 50px;
+    border: 1px solid black;
+    display: inline-block;
+}
+
+.button-text
+{
+    color: black;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+
+
+
+/* Pricing Page By Kennedy */
+
+
+.container {
+    width: 100%;
+    height: 700px;
+    margin-top: 70px;
+    background: whitesmoke;
+    text-align: center;
+}
+
+.home-page-pricing {
+    color: black;
+    text-decoration: none;
+}
+
+.circle {
+    border-radius: 50px;
+    width: 90px;
+    height: 90px;
+    background: #705ecf;
+    font-size: 30px;
+    line-height: 2.9;
+}
+
+
+.box {
+    width: 280px;
+    height: 400px;
+    outline: 1px solid black;
+    float: left;
+    text-align: center;
+    margin-left: 60px;
+}
+
+.boxtext {
+    color: lightslategray;
+    font-size: 20px;
+    padding: 10px;
+    line-height: 40px;
+    list-style-type: none;
+
+}
+
+.damn-btn {
+    width: 200px;
+    height: 80px;
+border: 1px solid black;
 }
