--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -170,7 +170,7 @@ p {
   flex-direction: column;
   align-items: center;
 }
-.icon {
+.green-icon {
   height: 4.375rem;
   width: 4.375rem;
   border-radius: 50%;
@@ -178,7 +178,8 @@ p {
   text-align: center;
 }
 
-.icon span {
+
+.green-icon i {
   line-height: 4.375rem;
   font-size: 1.5rem;
   color: var(--white);
@@ -356,7 +357,7 @@ h6 {
     align-self: flex-start;
     margin-bottom: .2rem;
 }
-.logo-title, 
+.logo-title,
 .logo-icon {
     font-size: 2rem;
     font-weight: 600;
@@ -441,7 +442,7 @@ h6 {
     border-radius: 10%;
     height: 2.75rem;
     background: var(--purple);
-    padding: 0.8rem; 
+    padding: 0.8rem;
     margin-left: .8rem;
 }
 
@@ -482,7 +483,7 @@ h6 {
 }
 .articles {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
 
 }
@@ -504,7 +505,7 @@ h6 {
     margin: 1.5rem 0 1.5rem 0;
 }
 .feature-btn {
-   color: var(--purple); 
+   color: var(--purple);
    margin-top: 3rem;
    border: none;
    background: var(--white);
@@ -651,7 +652,7 @@ h6 {
     }
     .menu-btn:hover {
         cursor: pointer;
-    } 
+    }
     .list-item,
     .drop-down {
         padding: .5rem 0;
@@ -801,7 +802,7 @@ h6 {
 	background-position: center;
 	background-size: 100%;
 	background-repeat: no-repeat;
-	
+
 }
 
 .hero {
@@ -818,7 +819,7 @@ h6 {
 	justify-content: center;
 	padding-right: 2rem;
 }
- 
+
 .color {
 	color: var(--green);
 
@@ -871,7 +872,7 @@ h6 {
 color: #00a3e2;
 }
 .fa-folder-open {
-	color:#e53b2c; 
+	color:#e53b2c;
 }
 
 .fa-coffee {
@@ -898,12 +899,12 @@ color: #00a3e2;
 
 /*team*/
 .team_bg {
-	background-color: #F8F9FA;	
+	background-color: #F8F9FA;
 }
 .team {
 	text-align: center;
 	height: 35rem;
-	
+
 }
 .team_para {
 	line-height: 1.7;
@@ -914,7 +915,7 @@ color: #00a3e2;
 }
 
 .team_member {
-	
+
 	background-color: #FFFFFF;
 	box-shadow: 0.2rem 0.2rem  1rem #ccc;
 }
@@ -946,7 +947,7 @@ color: #00a3e2;
 	color: #333333;
 	padding-bottom: 1rem;
 }
- 
+
 .img {
 	padding: 2rem 0 1rem 0;
 	border-radius: 50%;
@@ -954,7 +955,7 @@ color: #00a3e2;
 
 .team_title {
 	padding-top: 3rem;
-}	
+}
 
 
 
@@ -988,12 +989,12 @@ color: #00a3e2;
 
 .faq_list {
 	padding-bottom: 5rem;
-	
+
 }
 
 .faq_que {
 	max-width: 100%;
-	
+
 	margin: auto;
 	background-color: #F3F3F3;
 	margin-bottom: 2rem;
@@ -1007,7 +1008,7 @@ input[type=checkbox] {
   display: none;
 }
 input[type=checkbox] ~ label {
-	
+
 	background-color: #F3F3F3;
 	padding: 1.5rem;
 	display: block;
