--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -609,6 +609,7 @@ h6 {
 /* Partners */
 .partners {
     text-align: center;
+
 }
 .partner-container {
     display: flex;
@@ -957,7 +958,7 @@ color: #00a3e2;
 }
 .team {
 	text-align: center;
-	height: 35rem;
+  padding-bottom: 6rem;
 
 }
 .team_para {
@@ -1097,3 +1098,64 @@ input[type=checkbox] ~ label {
 #check_3:checked ~ .fc3{
 	display: block;
 }
+@media all and (max-width:500px) {
+
+  html {
+    /*font-size: 14px;*/
+
+  }
+
+  /* for auout us */
+  .wrapper {
+    width: 92%;
+    margin: 0 auto;
+  }
+  .banner {
+    padding: 2rem 0;
+  }
+
+  .benefits {
+    
+    display: flex;
+    flex-direction: column;
+  }
+  .benefits_items {
+  margin-bottom: 2rem;  
+  }
+  
+
+  .hero , .faq_hero {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about , .faq {
+    width: 100%;
+    display: block;
+    height: 18rem;
+  }
+
+  .team_members {
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  .team_member {
+    
+  
+    margin-bottom: 2rem; 
+  }
+
+  .team_para {
+    padding: 1rem 1rem ; 
+  }
+
+ 
+ /*for faq */
+
+ .faq_heading {
+  padding-top: 4rem;
+ }
+  
+}  
