--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -841,7 +841,10 @@ width: 80%;
 }
 /*About us*/
 
-
+.marginpara {
+  margin: 1.5rem 0 2rem 0;
+}
+ 
 .banner{
 	display:flex;
 	justify-content: center;
@@ -952,6 +955,7 @@ color: #00a3e2;
 }
 
 /*team*/
+
 .team_bg {
 	background-color: #F8F9FA;
 }
@@ -1097,3 +1101,64 @@ input[type=checkbox] ~ label {
 #check_3:checked ~ .fc3{
 	display: block;
 }
+
+@media all and (max-width:500px) {
+
+  html {
+    font-size: 14px;
+  }
+  /* for auout us */
+  .wrapper {
+    width: 92%;
+    margin: 0 auto;
+  }
+  .banner {
+    padding: 2rem 0;
+  }
+
+  .benefits {
+    
+    display: flex;
+    flex-direction: column;
+  }
+  .benefits_items {
+  margin-bottom: 2rem;  
+  }
+  
+
+  .hero , .faq_hero {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about , .faq {
+    width: 100%;
+    display: block;
+    height: 18rem;
+  }
+
+  .team_members {
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  .team_member {
+    
+  
+    margin-bottom: 2rem; 
+  }
+
+  .team_para {
+    padding: 1rem 1rem ; 
+  }
+
+ 
+ /*for faq */
+
+ .faq_heading {
+  padding-top: 4rem;
+ }
+  
+  
+}  
