Added mini banner

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -78,6 +78,31 @@ p {
   flex: 1;
 }
 
+.breadcrumb {
+  background-color: transparent;
+  justify-content: center;
+  padding: 5vw 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  border-radius: 0.25rem;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  display: inline-block;
+  padding: 0 0.5rem;
+  color: ##6c757d;
+  content: "/";
+  justify-content: center;
+}
+
+li.breadcrumb-item a {
+  text-decoration: none;
+  font-weight: 700;
+  color: #000;
+}
+
   /* Contact Page */
 #contact {
   padding: 5rem;
@@ -287,6 +312,10 @@ p {
     margin-right: 1rem;
   }
 
+  .message {
+    margin-right: 1rem;
+  }
+
   #map {
     max-width: 95vw;
     overflow: hidden;
@@ -313,6 +342,52 @@ p {
   }
 }
 
+@media all and (min-width:501px) and (max-width:960px) {
+
+  html {
+    font-size: 16px;
+  }
+  .row {
+    flex-direction: column;
+  }
+  #contact {
+    padding: 1rem;
+  }
+  .lname, .email {
+    flex: 1;
+    margin-left: 0;
+    margin-right: 1rem;
+  }
+
+  .message {
+    margin-right: 1rem;
+  }
+
+  #map {
+    max-width: 95vw;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  #map .row, #map iframe {
+    width: 100%;
+  }
+
+  #comm {
+    padding: 3rem 0;
+  }
+
+  .sub-form {
+    width: 95%;
+  }
+  .footer-container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .footer-container * {
+    margin: 0.5rem 0;
+  }
+}
 
 /* Typography */
 h1 {
@@ -731,7 +806,7 @@ h6 {
   height: 53px;
   padding: 5px;
   font-size: 1rem;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
   margin-top: 1.5rem;
 }
 
@@ -751,7 +826,7 @@ h6 {
 .wrapper1 {
   width: 90%;
   margin: 0 auto;
-} 
+}
 
 .price-container {
   width: 100%;
@@ -768,13 +843,13 @@ h6 {
 margin: 3rem 0 2rem 0;
 }
 
-.home-page-pricing { 
+.home-page-pricing {
   color: black;
   text-decoration: none;
 }
 
 hr {
-width: 80%; 
+width: 80%;
 }
 
 .rounded-circle {
@@ -789,7 +864,7 @@ width: 80%;
   position: absolute;
   color: #ffffff;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
 }
 
 
@@ -820,7 +895,7 @@ width: 80%;
 /* .box:hover {
   box-shadow: 4px 7px;
 } */
- 
+
 .boxtext {
   color: lightslategray;
   font-size: 20px;
@@ -836,7 +911,7 @@ width: 80%;
   height: 50px;
   padding: 5px;
   font-size: 1rem;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
   margin: 1rem 0;
 }
 /*About us*/
