solve teh height of team.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1211,6 +1211,10 @@ input[type=checkbox] ~ label {
     display: block;
     height: 18rem;
   }
+  .team {
+    height: auto;
+  }
+  
 
   .team_members {
     display: flex;
