--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1036,7 +1036,8 @@ color: #00a3e2;
 }
 .team {
 	text-align: center;
-	height: 35rem;
+	
+  padding-bottom: 5rem;
 
 }
 .team_para {
@@ -1137,6 +1138,16 @@ color: #00a3e2;
 	display: none;
 }
 
+.faq_lable {
+  position: relative;
+}
+.icon_down {
+  position: absolute;
+  right: 0.5rem;
+  top:40%;
+
+}
+
 input[type=checkbox] {
   display: none;
 }
@@ -1212,7 +1223,8 @@ input[type=checkbox] ~ label {
     height: 18rem;
   }
   .team {
-    height: auto;
+    
+    padding-bottom: 2rem;
   }
   
 
