--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -295,101 +295,7 @@ li.breadcrumb-item a {
   font-size: 1.9rem;
 }
 
-  /* Responsive */
 
-@media all and (max-width:500px) {
-
-  html {
-    font-size: 14px;
-  }
-  .row {
-    flex-direction: column;
-  }
-  #contact {
-    padding: 1rem;
-  }
-  .lname, .email {
-    flex: 1;
-    margin-left: 0;
-    margin-right: 1rem;
-  }
-
-  .message {
-    margin-right: 1rem;
-  }
-
-  #map {
-    max-width: 95vw;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-
-  #map .row, #map iframe {
-    width: 100%;
-  }
-
-  #comm {
-    padding: 3rem 0;
-  }
-
-  .sub-form {
-    width: 95%;
-  }
-  .footer-container {
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .footer-container * {
-    margin: 0.5rem 0;
-  }
-}
-
-@media all and (min-width:501px) and (max-width:960px) {
-
-  html {
-    font-size: 16px;
-  }
-  .row {
-    flex-direction: column;
-  }
-  #contact {
-    padding: 1rem;
-  }
-  .lname, .email {
-    flex: 1;
-    margin-left: 0;
-    margin-right: 1rem;
-  }
-
-  .message {
-    margin-right: 1rem;
-  }
-
-  #map {
-    max-width: 95vw;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-
-  #map .row, #map iframe {
-    width: 100%;
-  }
-
-  #comm {
-    padding: 3rem 0;
-  }
-
-  .sub-form {
-    width: 95%;
-  }
-  .footer-container {
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .footer-container * {
-    margin: 0.5rem 0;
-  }
-}
 
 /* Typography */
 h1 {
@@ -455,13 +361,10 @@ h6 {
 }
 .nav-list {
     display: flex;
-    justify-content: space-between;
-}
-.list-item {
-    margin:0 .5rem 0 .25rem;
+    justify-content: space-around;
 }
 .nav-link {
-    font-size: .9rem;
+    font-size: .75rem;
     text-decoration: none;
     color: #000000;
 }
@@ -539,7 +442,7 @@ h6 {
     align-self: center;
 }
 .hero-title {
-  font-size: 4rem;
+    font-size: 3.25rem;
     font-weight: 600;
     line-height: 1.2;
 }
@@ -634,6 +537,7 @@ h6 {
     margin-bottom: 5rem;
 }
 .services-title {
+  font-size: 1.8rem;
     line-height: 1;
 }
 .services-subtitle {
@@ -705,70 +609,6 @@ h6 {
     font-size: 3rem;
 }
 
-@media all and (max-width: 980px) {
-
-    .nav-container {
-        min-width: 50%;
-        display: flex;
-        justify-content: flex-end;
-    }
-    .search-container {
-        /* min-width: 430px; */
-        flex-grow: 1;
-        justify-content: center;
-        margin-top: 1rem;
-        flex-wrap: wrap;
-    }
-    .nav-list {
-        display: none;
-    }
-    .menu-btn {
-        display: block;
-        text-align: center;;
-        background: var(--white);
-        color: #000000;
-        padding: .5rem .7rem;
-        border-radius: .3rem;
-        border: 1px solid;
-        max-width: 70px;
-    }
-    .menu-btn:hover {
-        cursor: pointer;
-    }
-    .list-item,
-    .drop-down {
-        padding: .5rem 0;
-        text-align: center;
-    }
-    .drop-down:hover .dropdown-list{
-        display: none;
-    }
-    .dropdown-link {
-        color: #000000;
-    }
-    .menu {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    .toggle-menu:checked ~.nav-list {
-        display: flex;
-        position: relative;
-        flex-direction: column;
-        right: 40vw;
-    }
-    .toggle-drop:checked ~.dropdown-list {
-        display: flex;
-        position: relative;
-        flex-direction: column;
-        /* width: max-content; */
-        background: var(--white);
-        padding: .5rem 0 0 0;
-        border-radius: 0;
-        position: static;
-        text-align: center;
-    }
-}
 
 /* 404 Error-Page*/
 
@@ -1254,6 +1094,173 @@ input[type=checkbox] ~ label {
  .faq_heading {
   padding-top: 4rem;
  }
-  
-  
 }  
+
+@media all and (min-width:501px) and (max-width:960px) {
+
+  html {
+    font-size: 16px;
+  }
+  .row {
+    flex-direction: column;
+  }
+  #contact {
+    padding: 1rem;
+  }
+  .lname, .email {
+    flex: 1;
+    margin-left: 0;
+    margin-right: 1rem;
+  }
+
+  .message {
+    margin-right: 1rem;
+  }
+
+  #map {
+    max-width: 95vw;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  #map .row, #map iframe {
+    width: 100%;
+  }
+
+  #comm {
+    padding: 3rem 0;
+  }
+
+  .sub-form {
+    width: 95%;
+  }
+  .footer-container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .footer-container * {
+    margin: 0.5rem 0;
+  }
+}
+
+  /* Responsive */
+
+  @media all and (max-width:500px) {
+
+    html {
+      font-size: 14px;
+    }
+    .row {
+      flex-direction: column;
+    }
+    #contact {
+      padding: 1rem;
+    }
+    .lname, .email {
+      flex: 1;
+      margin-left: 0;
+      margin-right: 1rem;
+    }
+  
+    .message {
+      margin-right: 1rem;
+    }
+  
+    #map {
+      max-width: 95vw;
+      overflow: hidden;
+      margin: 0 auto;
+    }
+  
+    #map .row, #map iframe {
+      width: 100%;
+    }
+  
+    #comm {
+      padding: 3rem 0;
+    }
+  
+    .sub-form {
+      width: 95%;
+    }
+    .footer-container {
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .footer-container * {
+      margin: 0.5rem 0;
+    }
+  }
+
+  @media all and (max-width: 980px) {
+    .hero-title {
+      font-size: 2.5rem;
+    }
+    .article-text {
+      font-size: 0.8rem;
+  }
+
+    .nav-container {
+        min-width: 50%;
+        display: flex;
+        justify-content: flex-end;
+    }
+    .search-container {
+        /* min-width: 430px; */
+        flex-grow: 1;
+        justify-content: center;
+        margin-top: 1rem;
+        flex-wrap: wrap;
+    }
+    .nav-list {
+        display: none;
+    }
+    .menu-btn {
+        display: block;
+        text-align: center;;
+        background: var(--white);
+        color: #000000;
+        padding: .5rem .7rem;
+        border-radius: .3rem;
+        border: 1px solid;
+        max-width: 70px;
+    }
+    .menu-btn:hover {
+        cursor: pointer;
+    }
+    .list-item,
+    .drop-down {
+        padding: .5rem 0;
+        text-align: center;
+    }
+    .drop-down:hover .dropdown-list{
+        display: none;
+    }
+    .dropdown-link {
+        color: #000000;
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .toggle-menu:checked ~.nav-list {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        right: 40vw;
+    }
+    .toggle-drop:checked ~.dropdown-list {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        /* width: max-content; */
+        background: var(--white);
+        padding: .5rem 0 0 0;
+        border-radius: 0;
+        position: static;
+        text-align: center;
+    }
+}
+
+  
